--- a/src/scss/slider-dmtk.scss
+++ b/src/scss/slider-dmtk.scss
@@ -7,15 +7,24 @@
 }
 
 .actions {
+  cursor: pointer;
   position: absolute;
   z-index: 2;
+  background-color: white;
+  border-radius: 50%;
+  width: 25px;
+  display: flex;
+  height: 25px;
+  align-items: center;
+  justify-content: center;
+  font-family: monospace;
 
   &-prev {
-    left: 0;
+    left: 5px;
   }
 
   &-next {
-    right: 0;
+    right: 5px;
   }
 }
 
@@ -31,7 +40,6 @@ ul.slider {
 .slider {
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -webkit-overflow-scrolling: touch;
-  border: 1px solid red;
   display: flex;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -41,7 +49,7 @@ ul.slider {
   width: 100%;
 
   img {
-    max-height: 340px;
+    max-height: 290px;
     max-width: 100%;
     width: auto;
     transition: opacity 1s;
@@ -73,20 +81,24 @@ ul.slider {
   align-items: center;
   display: flex;
   justify-content: center;
-  margin: 0;
+  margin: 12px 0 0;
   padding: 0;
   width: 100%;
+}
 
-  li {
-    background-color: #92bba4;
-    border-radius: 50%;
-    height: 20px;
-    list-style: none;
+.slider--dot {
+  background-color: #92bba4;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 10px;
+  list-style: none;
+  width: 10px;
+
+  &:not(:first-child) {
     margin-left: 15px;
-    width: 20px;
+  }
 
-    &.-active {
-      background-color: #ffaa00;
-    }
+  &.-active {
+    background-color: #ffaa00;
   }
 }
